--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,29 @@
-# nginx.conf
 server {
     listen 80;
     server_name localhost;
+
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log combined;
+
+    # Handle assets directory specifically
+    location /assets/ {
+        root /usr/share/nginx/html;
+        try_files $uri =404;
+        add_header Cache-Control "public, max-age=31536000";
+        # Add debugging headers
+        add_header X-Debug-Path $uri always;
+        add_header X-Debug-Root $document_root always;
+    }
 
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
         add_header Cache-Control "no-cache";
+        # Add CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
     }
+
+    # Handle 404 errors
+    error_page 404 /index.html;
 }
