--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,20 +1,21 @@
-# docker-compose.staging.yml 0.0.1
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile.staging
-      args:
-        - VITE_API_URL=${VITE_API_URL}
     image: rekkoo-app-staging-${SAFE_BRANCH_NAME}:latest
     container_name: rekkoo-staging-${SAFE_BRANCH_NAME}
+    networks:
+      - proxy
+    environment:
+      - VITE_API_URL=${VITE_API_URL}
     pull_policy: never
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
       - "traefik.http.services.rekkoo-staging-${SAFE_BRANCH_NAME}.loadbalancer.server.port=80"
-      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.service=rekkoo-staging-${SAFE_BRANCH_NAME}"
-      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.rule=Host(`staging.rekkoo.com`) && Query(`remote`, `${SAFE_BRANCH_NAME}`)"
+      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.rule=Host(`staging.rekkoo.com`)"
       - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.entrypoints=websecure"
       - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.tls=true"
       - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.tls.certresolver=letsencrypt"
+
+networks:
+  proxy:
+    external: true
