--- a/nginx.conf
+++ b/nginx.conf
@@ -5,25 +5,34 @@ server {
     error_log /var/log/nginx/error.log debug;
     access_log /var/log/nginx/access.log combined;
 
-    # Handle assets directory specifically
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Handle assets with proper MIME types
     location /assets/ {
-        root /usr/share/nginx/html;
+        types {
+            text/javascript js;
+            text/css css;
+            image/svg+xml svg;
+        }
         try_files $uri =404;
         add_header Cache-Control "public, max-age=31536000";
-        # Add debugging headers
-        add_header X-Debug-Path $uri always;
-        add_header X-Debug-Root $document_root always;
     }
 
     location / {
-        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
         add_header Cache-Control "no-cache";
+
         # Add CORS headers
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' '*' always;
     }
 
     # Handle 404 errors
     error_page 404 /index.html;
+
+    # Add proper MIME type handling
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 }
