--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -10,11 +10,11 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
-      - "traefik.http.services.rekkoo-staging-${SAFE_BRANCH_NAME}.loadbalancer.server.port=80"
-      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.rule=Host(`staging.rekkoo.com`)"
-      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.entrypoints=websecure"
-      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.tls=true"
-      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.rekkoo-staging.rule=Host(`staging.rekkoo.com`)"
+      - "traefik.http.routers.rekkoo-staging.entrypoints=websecure"
+      - "traefik.http.routers.rekkoo-staging.tls=true"
+      - "traefik.http.routers.rekkoo-staging.tls.certresolver=letsencrypt"
+      - "traefik.http.services.rekkoo-staging.loadbalancer.server.port=80"
 
 networks:
   proxy:
