--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen 80 default_server;
+    server_name _;  # Accept any hostname
 
     error_log /var/log/nginx/error.log debug;
     access_log /var/log/nginx/access.log combined;
@@ -8,31 +8,36 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Handle assets with proper MIME types
-    location /assets/ {
-        types {
-            text/javascript js;
-            text/css css;
-            image/svg+xml svg;
-        }
-        try_files $uri =404;
-        add_header Cache-Control "public, max-age=31536000";
-    }
+    # Add debugging info to response headers
+    add_header X-Uri "$uri" always;
+    add_header X-Request-Filename "$request_filename" always;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
         add_header Cache-Control "no-cache";
-
         # Add CORS headers
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' '*' always;
     }
 
-    # Handle 404 errors
-    error_page 404 /index.html;
+    location /assets/ {
+        alias /usr/share/nginx/html/assets/;
+        try_files $uri =404;
+        add_header Cache-Control "public, max-age=31536000";
+    }
 
-    # Add proper MIME type handling
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    # Handle all options pre-flight requests
+    if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' '*';
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+        return 204;
+    }
+
+    error_page 404 /index.html;
+    error_page 500 502 503 504 /50x.html;
 }
