--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80 default_server;
-    server_name _;  # Accept any hostname
+    server_name _;
 
     error_log /var/log/nginx/error.log debug;
     access_log /var/log/nginx/access.log combined;
@@ -8,12 +8,15 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Add debugging info to response headers
-    add_header X-Uri "$uri" always;
-    add_header X-Request-Filename "$request_filename" always;
+    # First try to serve static files
+    location /assets/ {
+        try_files $uri =404;
+        add_header Cache-Control "public, max-age=31536000";
+    }
 
+    # All routes should fall back to index.html for SPA
     location / {
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ /index.html;
         add_header Cache-Control "no-cache";
         # Add CORS headers
         add_header 'Access-Control-Allow-Origin' '*' always;
@@ -21,23 +24,7 @@ server {
         add_header 'Access-Control-Allow-Headers' '*' always;
     }
 
-    location /assets/ {
-        alias /usr/share/nginx/html/assets/;
-        try_files $uri =404;
-        add_header Cache-Control "public, max-age=31536000";
-    }
-
-    # Handle all options pre-flight requests
-    if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' '*';
-        add_header 'Access-Control-Max-Age' 1728000;
-        add_header 'Content-Type' 'text/plain charset=UTF-8';
-        add_header 'Content-Length' 0;
-        return 204;
-    }
-
-    error_page 404 /index.html;
-    error_page 500 502 503 504 /50x.html;
+    # Debug headers
+    add_header X-Debug-Uri "$uri" always;
+    add_header X-Debug-Path "$request_uri" always;
 }
