--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -2,26 +2,24 @@ services:
   app:
     image: rekkoo-app-staging-${SAFE_BRANCH_NAME}:latest
     container_name: rekkoo-staging-${SAFE_BRANCH_NAME}
+    restart: unless-stopped
     networks:
       - proxy
     environment:
       - VITE_API_URL=${VITE_API_URL}
-    pull_policy: never
+    security_opt:
+      - no-new-privileges:true
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
-      # Basic service and router setup
+      # Make service name consistent with container name
       - "traefik.http.services.staging-${SAFE_BRANCH_NAME}.loadbalancer.server.port=80"
-      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.service=staging-${SAFE_BRANCH_NAME}"
-      # Modified rule to handle query parameters
       - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.rule=Host(`staging.rekkoo.com`)"
       - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.entrypoints=websecure"
+      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.service=staging-${SAFE_BRANCH_NAME}"
       - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.tls=true"
-      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.tls.certresolver=letsencrypt"
-      # Add middleware to handle query parameters
-      - "traefik.http.middlewares.query-strip.stripQueryParam.names=remote"
-      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.middlewares=query-strip@docker"
 
 networks:
   proxy:
     external: true
+    name: proxy  # Be explicit about the network name
