--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -2,24 +2,9 @@ services:
   app:
     image: rekkoo-app-staging-${SAFE_BRANCH_NAME}:latest
     container_name: rekkoo-staging-${SAFE_BRANCH_NAME}
-    restart: unless-stopped
-    networks:
-      - proxy
-    environment:
-      - VITE_API_URL=${VITE_API_URL}
-    security_opt:
-      - no-new-privileges:true
     labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=proxy"
-      # Make service name consistent with container name
-      - "traefik.http.services.staging-${SAFE_BRANCH_NAME}.loadbalancer.server.port=80"
       - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.rule=Host(`staging.rekkoo.com`)"
       - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.entrypoints=websecure"
       - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.service=staging-${SAFE_BRANCH_NAME}"
       - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.tls=true"
-
-networks:
-  proxy:
-    external: true
-    name: proxy  # Be explicit about the network name
+      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.tls.certresolver=letsencrypt"
