--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,37 +61,46 @@ commands:
       - run:
           name: Deploy to Hetzner
           command: |
-            DEPLOY_DIR="/home/rekkoo/web-<< parameters.environment >>/${SAFE_BRANCH_NAME}"
+            # Set base directory
+            BASE_DIR="/home/rekkoo/web"
+            if [ "<< parameters.environment >>" = "prod" ]; then
+              DEPLOY_DIR="${BASE_DIR}/prod"
+            else
+              DEPLOY_DIR="${BASE_DIR}/<< parameters.environment >>/${SAFE_BRANCH_NAME}"
+            fi
 
-            # Debug environment variables
-            echo "Checking build variables:"
-            echo "VITE_API_URL: ${VITE_API_URL}"
-            echo "SAFE_BRANCH_NAME: ${SAFE_BRANCH_NAME}"
+            echo "Starting deployment to ${DEPLOY_DIR}..."
+            echo "Environment: << parameters.environment >>"
+            echo "Branch: ${SAFE_BRANCH_NAME}"
 
+            # Create deployment directory
             ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} "
               mkdir -p ${DEPLOY_DIR}
             "
 
-            # Create a temporary .env file with the correct variables
-            echo "VITE_API_URL=${VITE_API_URL}" > .env.temp
-
+            # Copy files
             scp -o StrictHostKeyChecking=no \
-              .env.temp \
               /tmp/docker-images/rekkoo-app.tar.gz \
               docker-compose.yml \
-              docker-compose.<< parameters.environment >>.yml \
+              docker-compose.prod.yml \
+              docker-compose.staging.yml \
+              nginx.conf \
               ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST}:${DEPLOY_DIR}/
 
+            # Deploy
             ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} "
               cd ${DEPLOY_DIR} && \
-              mv .env.temp .env && \
               echo 'Loading Docker image...' && \
               gunzip -c rekkoo-app.tar.gz | docker load && \
+              echo 'Creating .env file...' && \
+              echo 'VITE_API_URL=${VITE_API_URL}' > .env && \
               echo 'Starting containers...' && \
-              VITE_API_URL=${VITE_API_URL} \
               SAFE_BRANCH_NAME=${SAFE_BRANCH_NAME} \
               DEPLOY_ENV=<< parameters.environment >> \
-              docker compose -f docker-compose.yml -f docker-compose.<< parameters.environment >>.yml up -d
+              docker compose -f docker-compose.yml -f docker-compose.<< parameters.environment >>.yml up -d && \
+              echo 'Cleaning up...' && \
+              rm rekkoo-app.tar.gz && \
+              echo 'Deployment completed for ${SAFE_BRANCH_NAME} to << parameters.environment >>'
             "
       - slack/notify:
           event: fail
