--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -3,8 +3,10 @@ services:
     image: rekkoo-app-staging-${SAFE_BRANCH_NAME}:latest
     container_name: rekkoo-staging-${SAFE_BRANCH_NAME}
     labels:
-      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.rule=Host(`staging.rekkoo.com`)"
-      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.entrypoints=websecure"
-      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.service=staging-${SAFE_BRANCH_NAME}"
-      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.tls=true"
-      - "traefik.http.routers.staging-${SAFE_BRANCH_NAME}.tls.certresolver=letsencrypt"
+      - "traefik.enable=true"
+      - "traefik.docker.network=proxy"
+      - "traefik.http.services.rekkoo-staging-${SAFE_BRANCH_NAME}.loadbalancer.server.port=80"
+      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.rule=Host(`staging.rekkoo.com`)"
+      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.entrypoints=websecure"
+      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.tls=true"
+      - "traefik.http.routers.rekkoo-staging-${SAFE_BRANCH_NAME}.service=rekkoo-staging-${SAFE_BRANCH_NAME}"
