--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,8 +65,10 @@ commands:
             BASE_DIR="/home/rekkoo/web"
             if [ "<< parameters.environment >>" = "prod" ]; then
               DEPLOY_DIR="${BASE_DIR}/prod"
+              COMPOSE_FILES="docker-compose.yml docker-compose.prod.yml"
             else
               DEPLOY_DIR="${BASE_DIR}/<< parameters.environment >>/${SAFE_BRANCH_NAME}"
+              COMPOSE_FILES="docker-compose.yml docker-compose.staging.yml"
             fi
 
             echo "Starting deployment to ${DEPLOY_DIR}..."
@@ -78,13 +80,16 @@ commands:
               mkdir -p ${DEPLOY_DIR}
             "
 
-            # Copy files
+            # Copy only necessary files
+            for file in $COMPOSE_FILES nginx.conf; do
+              scp -o StrictHostKeyChecking=no \
+                $file \
+                ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST}:${DEPLOY_DIR}/
+            done
+
+            # Copy docker image
             scp -o StrictHostKeyChecking=no \
               /tmp/docker-images/rekkoo-app.tar.gz \
-              docker-compose.yml \
-              docker-compose.prod.yml \
-              docker-compose.staging.yml \
-              nginx.conf \
               ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST}:${DEPLOY_DIR}/
 
             # Deploy
