update to allow multiple staging environments to run at the same time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,10 +65,9 @@ commands:
             BASE_DIR="/home/rekkoo/web"
             if [ "<< parameters.environment >>" = "prod" ]; then
               DEPLOY_DIR="${BASE_DIR}/prod"
-              COMPOSE_FILES="docker-compose.yml docker-compose.prod.yml"
             else
+              # Create unique directory for each branch
               DEPLOY_DIR="${BASE_DIR}/<< parameters.environment >>/${SAFE_BRANCH_NAME}"
-              COMPOSE_FILES="docker-compose.yml docker-compose.staging.yml"
             fi
 
             echo "Starting deployment to ${DEPLOY_DIR}..."
