--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,10 +1,10 @@
 # docker-compose.local.yml
 services:
-  rekoo-local:
+  rekkoo-web:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: rekkoo-local
+    container_name: rekkoo-app
     env_file:
       - .env.local
     volumes:
