--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "prebuild": "node scripts/git-info.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
