unify traefik service names

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,8 +5,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
-      - "traefik.http.services.rekkoo-prod.loadbalancer.server.port=80"
-      - "traefik.http.routers.rekkoo-prod.rule=Host(`rekkoo.com`) || Host(`www.rekkoo.com`)"
-      - "traefik.http.routers.rekkoo-prod.entrypoints=websecure"
-      - "traefik.http.routers.rekkoo-prod.tls=true"
-      - "traefik.http.routers.rekkoo-prod.service=rekkoo-prod"
+      - "traefik.http.services.rekkoo-web-prod.loadbalancer.server.port=80"
+      - "traefik.http.routers.rekkoo-web-prod.rule=Host(`rekkoo.com`) || Host(`www.rekkoo.com`)"
+      - "traefik.http.routers.rekkoo-web-prod.entrypoints=websecure"
+      - "traefik.http.routers.rekkoo-web-prod.tls=true"
+      - "traefik.http.routers.rekkoo-web-prod.service=rekkoo-web-prod"
