add platform specification for Docker image in deploy script and docker-compose

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   rekkoo-web:
-    image: rekkoo-app-prod-main:latest
+    image: ${IMAGE_NAME:-rekkoo-app-prod-main:latest}
     platform: linux/amd64
     container_name: rekkoo-web-prod
     labels:
